Add Java module declaration for `neo4j-java-driver`
This update introduces an explicit `org.neo4j.driver` Java module declaration for `neo4j-java-driver` artifact. The introduced module name matches the previously used `Automatic-Module-Name` value.

`org.neo4j.driver.internal.RevocationStrategy` has been moved to `org.neo4j.driver.RevocationStrategy`.