@@ -16,8 +16,10 @@
   <description>Access to the Neo4j graph database through Java</description>
 
   <properties>
-    <moduleName>org.neo4j.driver</moduleName>
     <rootDir>${project.basedir}/..</rootDir>
+    <api.classes.directory>${basedir}/target/classes-without-jpms</api.classes.directory>
+    <surefire.jpms.args>--add-opens org.neo4j.driver/org.neo4j.driver.internal.util.messaging=ALL-UNNAMED</surefire.jpms.args>
+    <failsafe.parallelizable.jpms.args>--add-opens org.neo4j.driver/org.neo4j.driver.internal.util=ALL-UNNAMED --add-opens org.neo4j.driver/org.neo4j.driver.internal.async=ALL-UNNAMED</failsafe.parallelizable.jpms.args>
     <maven.deploy.skip>false</maven.deploy.skip>
   </properties>
 
@@ -111,21 +113,80 @@
   </dependencies>
 
   <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <configuration>
+            <compilerArgs combine.children="append">
+              <arg>--add-exports</arg>
+              <arg>jdk.internal.vm.ci/jdk.vm.ci.code=org.graalvm.nativeimage.builder</arg>
+              <arg>--add-exports</arg>
+              <arg>org.graalvm.nativeimage.builder/com.oracle.svm.core.annotate=org.neo4j.driver</arg>
+              <arg>--add-exports</arg>
+              <arg>org.graalvm.nativeimage.builder/com.oracle.svm.core.jdk=org.neo4j.driver</arg>
+            </compilerArgs>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <configuration>
+            <additionalOptions combine.children="append">
+              <option>--add-exports jdk.internal.vm.ci/jdk.vm.ci.code=org.graalvm.nativeimage.builder</option>
+              <option>--add-exports org.graalvm.nativeimage.builder/com.oracle.svm.core.annotate=org.neo4j.driver</option>
+              <option>--add-exports org.graalvm.nativeimage.builder/com.oracle.svm.core.jdk=org.neo4j.driver</option>
+            </additionalOptions>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-resources-plugin</artifactId>
+          <version>3.3.0</version>
+          <executions>
+            <execution>
+              <id>copy-classes-excluding-jpms</id>
+              <phase>compile</phase>
+              <goals>
+                <goal>copy-resources</goal>
+              </goals>
+              <configuration>
+                <outputDirectory>${api.classes.directory}</outputDirectory>
+                <resources>
+                  <resource>
+                    <directory>${project.build.outputDirectory}</directory>
+                    <excludes>
+                      <exclude>module-info.class</exclude>
+                    </excludes>
+                  </resource>
+                </resources>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>clirr-maven-plugin</artifactId>
+          <configuration>
+            <comparisonArtifacts>
+              <comparisonArtifact>
+                <groupId>org.neo4j.driver</groupId>
+                <artifactId>neo4j-java-driver</artifactId>
+                <version>4.0.0</version>
+              </comparisonArtifact>
+            </comparisonArtifacts>
+            <classesDirectory>${api.classes.directory}</classesDirectory>
+            <excludes>org/neo4j/driver/internal/**</excludes>
+            <ignoredDifferencesFile>clirr-ignored-differences.xml</ignoredDifferencesFile>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
     <plugins>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>clirr-maven-plugin</artifactId>
-        <configuration>
-          <comparisonArtifacts>
-            <comparisonArtifact>
-              <groupId>org.neo4j.driver</groupId>
-              <artifactId>neo4j-java-driver</artifactId>
-              <version>4.0.0</version>
-            </comparisonArtifact>
-          </comparisonArtifacts>
-          <excludes>org/neo4j/driver/internal/**</excludes>
-          <ignoredDifferencesFile>clirr-ignored-differences.xml</ignoredDifferencesFile>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -155,8 +216,6 @@
             <manifestEntries>
               <!-- This is used to programmatically determine the driver version -->
               <Implementation-Version>${project.version}-${build.revision}</Implementation-Version>
-              <!-- Stable module name for JDK9 automatic modules -->
-              <Automatic-Module-Name>${moduleName}</Automatic-Module-Name>
             </manifestEntries>
           </archive>
         </configuration>
